# sri-lanka-trip-planner

./: ONBOARDING.md
sri_lanka_trip_planner/: .env.example  README.md  pyproject.toml  requirements.txt
sri_lanka_trip_planner/data/: research_cache.json
sri_lanka_trip_planner/outputs/: final_report.md
sri_lanka_trip_planner/src/sri_lanka_trip_planner/: crew.py  main.py
sri_lanka_trip_planner/src/sri_lanka_trip_planner/config/: agents.yaml  tasks.yaml
sri_lanka_trip_planner/src/sri_lanka_trip_planner/tools/: __init__.py  budget_tool.py  itinerary_tool.py  research_tool.py  reviewer_tool.py
sri_lanka_trip_planner/tests/: test_agents.py
